<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".bottomsheets.SectionDetailOverviewFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShelfTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/margin_2x"
        android:textColor="?attr/colorOnSurface"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivBookOverview"
        app:layout_constraintTop_toTopOf="@id/ivBookOverview" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2x" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llShelfActionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/general_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_book_overview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_rename_shelf" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llShelfActionDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_2x"
        android:paddingVertical="@dimen/margin_2x">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_outline_delete_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_book_overview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete_shelf" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>