<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".bottomsheets.SectionDetailOverviewFragment">

    <include
        android:id="@+id/vpBookOverview"
        layout="@layout/viewpod_book_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/margin_2x" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBookDetailOverviewDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/general_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_outline_file_download_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_book_overview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_download" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBookDetailOverviewDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_2x"
        android:paddingVertical="@dimen/margin_2x">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_outline_delete_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_book_overview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBookDetailOverviewAddToShelves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/general_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_book_overview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_add_to_shelves" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBookDetailOverviewMarkAsRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_2x"
        android:layout_marginVertical="@dimen/margin_2x"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_done_24"
            app:tint="?attr/colorControlNormal" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_book_overview_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_mark_as_read" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>